# mcp-google-contacts-server

./: README.md  pyproject.toml  requirements.txt  setup.py
mcp_google_contacts_server/: config.py  google_contacts_service.py  main.py  tools.py
