[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-google-contacts-server"
version = "0.2.0"
description = "FastMCP server for Google Contacts with optional Google OAuth gating (Prefect-ready)"
readme = "README.md"
authors = [
    {name = "Rayan Zaki", email = "rayan.hassici@ensia.edu.dz"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "httpx",
    "pillow>=10",
    "pydantic",
]

[project.urls]
"Homepage" = "https://github.com/rayanzaki/mcp-google-contacts-server"
"Bug Tracker" = "https://github.com/rayanzaki/mcp-google-contacts-server/issues"

[tool.setuptools]
packages = ["mcp_google_contacts_server"]

[project.scripts]
mcp-google-contacts = "mcp_google_contacts_server.main:main"
